--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,21 @@
-div {
-    width: 100px;
-    height: 100px;
-    background-color: deepskyblue;
-    border-radius: 50%;
-    position: fixed;
-    bottom: 100px;
-    right: 100px;
+p {
+    background-color: crimson;
 }
 
-h1
+#test {
+    background-color: royalblue;
+}
+
+.text {
+    background-color: seagreen;
+    font-size: 34px;
+    font-family: Snell Roundhand, cursive;
+    font-weight: 900;
+    width: 50%;
+    height: 200px;
+
+    border-color: deeppink;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 20px;
+}
